# AppRun

./: .travis-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  exec.c
.github/actions/build-x86_64-in-docker/: Dockerfile  action.yml
.github/workflows/: ci.yml  pre-release.yml  tagged-release.yml
cmake/: aarch64-toolchain.cmake  armhf-toolchain.cmake  get_libconfig.cmake  gnueabihf-toolchain.cmake  i386-toolchain.cmake  x86_64-toolchain.cmake
docs/: MODULES.md  USAGE.md
src/: CMakeLists.txt  environment.c  environment.h  exec.c  interpreter.c  interpreter.h  path.c  path.h  shared.c  shared.h
src/apprun/: CMakeLists.txt  apprun.cpp  apprun.h  check_rt.c  libc_utils.c  libc_utils.h  main.c  main.cpp  runtime_environment.c  runtime_environment.h  runtime_environmet.c  runtime_environmet.h  runtime_files.c  runtime_files.h  runtime_interpreter.c  runtime_interpreter.h
src/check-runtime/: CMakeLists.txt  check-libc.c  check-libstdc++.cpp  main.cpp
src/common/: CMakeLists.txt  appdir_environment.h  elf_utils.c  elf_utils.h  environment.c  environment.h  exe_utils.c  exe_utils.h  execve_utils.c  execve_utils.h  file_utils.c  file_utils.h  hook_debug.c  hooks_debug.h  path.c  path.h  redirect_path.c  redirect_path.h  shell_utils.c  shell_utils.h  string_list.c  string_list.h  string_utils.c  string_utils.h
src/env/: CMakeLists.txt  main.c  runtime_interpreter.h
src/hooks/: CMakeLists.txt  constructor.c  environment.c  environment.h  exec.c  exec_args.c  exec_args.h  exec_utils.c  exec_utils.h  hooks.c  hooks.h  interpreter.c  interpreter.h  main.c  main.h  main_hook.c  main_hook.h  path.c  path.h  redirect_path.c  redirect_path.h  shared.c  shared.h
src/modules/: CMakeLists.txt  README.md  check-glibc.c  check-glibstdc++.cpp  common.c  common.h
test/: CMakeLists.txt  environment_test.c  interpreter_test.c  path_test.c  test-check-runtime.sh  test-runtime-checks-in-docker.sh  test_clean_env.sh  tests_shared.c  tests_shared.h  wrapper_test.c  wrapper_test_run.sh
test/apprun/: .env  CMakeLists.txt  create_appdir.sh  echo.desktop  hello_world_app.c  libc_get_version_bench.c  libc_utils_test.c  runtime_interpreter_test.c
test/common/: CMakeLists.txt  common_test.c  file_utils_test.c  path_test.c  shell_utils_test.c  test_execve_utils.c  tests_shared.c  tests_shared.h  utils_test.c
test/hooks/: CMakeLists.txt  environment_test.c  exec_hooks_test.c  exec_utils_tests.c  hooks_inner_target_test.c  hooks_outer_target_test.c  hooks_test.c  inner_script_exec_hooks_test.c  inner_target_exec_hooks_test.c  inner_target_execl_hooks_test.c  inner_target_execle_hooks_test.c  inner_target_execlp_hooks_test.c  inner_target_test.c  interpreter_test.c  outer_target_exec_hooks_test.c  outer_target_test.c  path_test.c  redirect_path_tests.c  tests_shared.h  wrapper_test.c
test/modules/: CMakeLists.txt  common.sh  test-check-glibc.sh  test-check-glibstdc++.sh
test/utils/: create_appdir.sh  make_bin_linker_path_relative.sh
tooling/: Dockerfile.x86_64  build-docker-images.sh  build-in-docker.sh  build.sh  test-in-docker.sh  test.sh
tooling/docker/: Dockerfile.aarch64  Dockerfile.gnueabihf  Dockerfile.i386  Dockerfile.x86_64
